mise à jour d'une reservation

--- a/CineQuebec.Windows/View/UsersControls/ReadFilmControl.xaml
+++ b/CineQuebec.Windows/View/UsersControls/ReadFilmControl.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="CineQuebec.Windows.View.ReadFilmControl"
+<UserControl x:Class="CineQuebec.Windows.View.UsersControls.ReadFilmControl"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
