--- a/CineQuebec.Windows/View/UsersControls/UsersControl.xaml
+++ b/CineQuebec.Windows/View/UsersControls/UsersControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CineQuebec.Windows.View.UsersControl"
+﻿<UserControl x:Class="CineQuebec.Windows.View.UsersControls.UsersControl"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -30,9 +30,6 @@
 
             <DataGrid x:Name="dataGridAbonnes" Background="White" Grid.Column="0" Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle1}" RowStyle="{DynamicResource DataGridRowStyle1}" ItemsSource="{Binding }" AutoGenerateColumns="False" SelectionChanged="DataGrid_SelectionChanged">
                 <DataGrid.Columns>
-
-
-
 
                     <DataGridTextColumn IsReadOnly="True" CanUserResize="False" Width="auto" Header="#" x:Name="clnRang" Binding="{Binding Key}" />
                     <DataGridTemplateColumn Header="Nom d'utilisateur" IsReadOnly="True" CanUserResize="False" Width="auto">
@@ -96,7 +93,7 @@
 
                             <Ellipse>
                                 <Ellipse.Fill>
-                                    <ImageBrush ImageSource="../Ressources/images/users.png"/>
+                                    <ImageBrush ImageSource="/Ressources/images/users.png"/>
                                 </Ellipse.Fill>
                             </Ellipse>
 
