--- a/CineQuebec.Windows/View/AbonneView/AbonneProfilControl.xaml
+++ b/CineQuebec.Windows/View/AbonneView/AbonneProfilControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CineQuebec.Windows.View.AbonneProfilControl"
+﻿<UserControl x:Class="CineQuebec.Windows.View.AbonneView.AbonneProfilControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
