--- a/CineQuebec.Windows/View/UsersControls/AddProjectionControl.xaml
+++ b/CineQuebec.Windows/View/UsersControls/AddProjectionControl.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="CineQuebec.Windows.View.AddProjectionControl"
+<UserControl x:Class="CineQuebec.Windows.View.UsersControls.AddProjectionControl"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
