--- a/CineQuebec.Windows/View/UsersControls/AdminHomeControl.xaml
+++ b/CineQuebec.Windows/View/UsersControls/AdminHomeControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CineQuebec.Windows.View.AdminHomeControl"
+﻿<UserControl x:Class="CineQuebec.Windows.View.UsersControls.AdminHomeControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
